agregado de codigo JS para crear la tabla de pacientes en el html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header class="">
-        <h1 class="title">Tabla Clientes NutriLife</h1>
+        <h1 class="title">NutriLife</h1>
         <div class="bg-img">
             <p class="text-img">Vivir Mejor</p>
         </div>
@@ -77,5 +77,6 @@
 <script src="main.js"></script>
 <script src="js/form.js"></script>
 <script src="js/calculoImc.js"></script>
+<script src="prueba.ts"></script>
 </body>
 </html>
